# vsg_ode_robot

./: .gitignore  CMakeLists.txt  README.md  VSG_ODE_integration.md  abstractcontroller.cpp  abstractcontroller.h  abstractobstacle.cpp  abstractobstacle.h  abstractrobot.h  abstractwiring.cpp  abstractwiring.h  agent.cpp  agent.h  axis.h  backcaller.cpp  backcaller.h  backcallervector.h  base.cpp  base.h  callbackable.h  color.h  colorschema.cpp  colorschema.h  configurable.cpp  configurable.h  configurablelist.cpp  configurablelist.h  configuratorProxy.cpp  configuratorProxy.h  controller_misc.cpp  controller_misc.h  edit.h  fix_implementation_18_Mar.md  fourwheeled.cpp  fourwheeled.h  globaldata.cpp  globaldata.h  globaldatabase.cpp  globaldatabase.h  inspectable.cpp  (+82 more)
backup/: HumanoidRobot1.cpp  HumanoidRobot1.h  humanoid_robot.cpp  humanoid_robot.h  vsgprimitive.cpp  vsgprimitive.h
